--- a/static/index.html
+++ b/static/index.html
@@ -4,13 +4,10 @@
 <head>
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 	<title>Wikipedia Names Your Band</title>
-	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset/reset-min.css"> 
-	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/fonts/fonts-min.css"> 
-	<link rel="stylesheet" type="text/css" href="/stylesheets/these_are_forms.css" />
-	<link rel="stylesheet" type="text/css" href="/stylesheets/application.css" />
-	<!--[if IE]>
-		<link href="stylesheets/these_are_forms_ie.css" rel="stylesheet" type="text/css" media="screen"></link>
-	<![endif]-->
+	<link rel="stylesheet" media="screen" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset/reset-min.css">
+	<link rel="stylesheet" media="screen" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/fonts/fonts-min.css">
+	<link rel="stylesheet" media="screen" type="text/css" href="/stylesheets/these_are_forms.css" />
+	<link rel="stylesheet" media="screen" type="text/css" href="/stylesheets/application.css" />
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 	<script type="text/javascript" src="/javascripts/application.js"></script>
 </head>
@@ -56,13 +53,14 @@
 			</span>
 		</li>
 	</ul>
+	<p>
+		<a href="#" class="picnik">
+			Edit my album cover with
+			<img src="http://www.picnik.com/badges/picnik_badge_88x31.gif" width="88" height="31" alt="Picnik" />
+		</a>
+	</p>
 </form>
-<p>
-	<button class="picnik">
-		Make my album cover!
-	</button>
-</p>
-<p>
+<p id="footer">
 	<a href="http://code.google.com/appengine/">
 		<img src="http://code.google.com/appengine/images/appengine-noborder-120x30.gif" alt="Powered by Google App Engine" />
 	</a>
@@ -70,7 +68,7 @@
 		<img src="http://www.picnik.com/graphics/api/picnik_32x32.png" alt="Powered by Picnik">
 	</a>
 </p>
-<a href="http://github.com/you">
+<a href="http://github.com/jpmckinney/wnyb/tree/master">
 	<img class="github" src="http://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub" />
 </a>
 </body>
