simplify HTML/CSS, fetch.py

--- a/static/index.html
+++ b/static/index.html
@@ -60,16 +60,11 @@
 		</a>
 	</p>
 </form>
-<p id="footer">
-	<a href="http://code.google.com/appengine/">
-		<img src="http://code.google.com/appengine/images/appengine-noborder-120x30.gif" alt="Powered by Google App Engine" />
-	</a>
-	<a href="http://www.picnik.com/">
-		<img src="http://www.picnik.com/graphics/api/picnik_32x32.png" alt="Powered by Picnik">
-	</a>
-</p>
+<a href="http://code.google.com/appengine/">
+	<img id="google" src="http://code.google.com/appengine/images/appengine-noborder-120x30.gif" alt="Powered by Google App Engine" />
+</a>
 <a href="http://github.com/jpmckinney/wnyb/tree/master">
-	<img class="github" src="http://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub" />
+	<img id="github" src="http://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub" />
 </a>
 </body>
 </html>
