--- a/static/share.html
+++ b/static/share.html
@@ -2,11 +2,12 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
+	<meta name="medium" content="image" />
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+	<meta name="description" content="New meme! My random band's new random album cover. Make your own!" />
 	<title>Wikipedia Names Your Band</title>
 	<link rel="stylesheet" media="screen" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset/reset-min.css">
 	<link rel="stylesheet" media="screen" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/fonts/fonts-min.css">
-	<link rel="stylesheet" media="screen" type="text/css" href="/stylesheets/these_are_forms.css" />
 	<link rel="stylesheet" media="screen" type="text/css" href="/stylesheets/application.css" />
 </head>
 <body>
@@ -18,46 +19,17 @@
 	<sup><a href="http://www.buzzfeed.com/peggy/wikipedia-names-your-band">1</a></sup>
 </h2>
 
-<form class="no_hover">
-	<ul>
-		<li class="half_left">
-			<div class="half_container">
-				<span>
-					<button class="artist">
-						<img src="/images/famfamfam/silk/arrow_refresh.png" width="16" height="16" alt="Regenerate Artist" />
-					</button>
-					<div id="artist"></div>
-					<label>Artist name</label>
-				</span>
-			</div>
-		</li>
-		<li class="half_right">
-			<div class="half_container">
-				<span>
-					<button class="album">
-						<img src="/images/famfamfam/silk/arrow_refresh.png" width="16" height="16" alt="Regenerate Album" />
-					</button>
-					<div id="album"></div>
-					<label>Album name (shorten it, maybe?)</label>
-				</span>
-			</div>
-		</li>
-		<li>
-			<span>
-				<div id="artwork"></div>
-				<button class="artwork">
-					<img src="/images/famfamfam/silk/arrow_refresh.png" width="16" height="16" alt="Regenerate Artwork" />
-				</button>
-			</span>
-		</li>
-	</ul>
-	<p>
-		<a href="#" class="picnik">
-			Edit my album cover with
-			<img src="http://www.picnik.com/badges/picnik_badge_88x31.gif" width="88" height="31" alt="Picnik" />
-		</a>
-	</p>
-</form>
+<p>
+	<a id="email" href="#">
+		<img src="http://s7.addthis.com/button1-email.gif" width="54" height="16" border="0" alt="Email" />
+	</a>
+
+	<a id="share" href="#">
+		<img src="http://s7.addthis.com/static/btn/sm-share-en.gif" width="83" height="16" alt="Bookmark and Share" />
+	</a>
+</p>
+
+<p id="cover"></p>
 
 <a href="http://code.google.com/appengine/">
 	<img id="google" src="http://code.google.com/appengine/images/appengine-noborder-120x30.gif" alt="Powered by Google App Engine" />
@@ -67,6 +39,7 @@
 </a>
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-<script type="text/javascript" src="/javascripts/index.js"></script>
+<script type="text/javascript" src="http://s7.addthis.com/js/200/addthis_widget.js"></script>
+<script type="text/javascript" src="/javascripts/share.js"></script>
 </body>
 </html>
