--- a/static/share.html
+++ b/static/share.html
@@ -30,7 +30,7 @@
 <p id="cover"></p>
 
 <p id="flickr">
-	Find more random album covers on <a href="http://flickr.com/groups/987550@N25/pool/">Flickr</a>!
+	Find more random album covers on <a href="http://flickr.com/groups/987550@N25/pool/">Flick<span>r</span></a>!
 </p>
 
 <a href="http://github.com/jpmckinney/wnyb/tree/master">
