--- a/static/share.html
+++ b/static/share.html
@@ -18,9 +18,11 @@
 	<sup><a href="http://www.buzzfeed.com/peggy/wikipedia-names-your-band">1</a></sup>
 </h2>
 
-<p>
+<p id="actions">
+	<label for="short_url">Short URL:</label>
+	<input id="short_url" type="text" readonly="readonly" />
 	<a id="email" href="#">
-		<img src="http://s7.addthis.com/button1-email.gif" width="54" height="16" border="0" alt="Email" />
+		<img src="http://s7.addthis.com/button1-email.gif" width="54" height="16" alt="Email" />
 	</a>
 	<a id="share" href="#">
 		<img src="http://s7.addthis.com/static/btn/sm-share-en.gif" width="83" height="16" alt="Bookmark and Share" />
@@ -30,7 +32,7 @@
 <p id="cover"></p>
 
 <p id="flickr">
-	Find more random album covers on <a href="http://flickr.com/groups/987550@N25/pool/">Flick<span>r</span></a>!
+	Find more random album covers in the <a href="http://flickr.com/groups/987550@N25/pool/">Flick<span>r</span> &#8220;Wikipedia Names Your Band&#8221; pool</a>!
 </p>
 
 <a href="http://github.com/jpmckinney/wnyb/tree/master">
