add 'refresh all' button

--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,10 @@
 <body>
 <h1>
 	Wikipedia Names Your Band
+	<button class="all">
+		<img src="/images/famfamfam/silk/arrow_refresh.png" width="16" height="16" alt="Regenerate All" />
+		refresh all
+	</button>
 </h1>
 <h2>
 	A totally random way to make your new random band's new random album cover. Make one!
