change anchors with empty href's to buttons

--- a/static/index.html
+++ b/static/index.html
@@ -56,10 +56,10 @@
 		</li>
 	</ul>
 	<p>
-		<a href="#" class="picnik">
+		<button class="picnik">
 			Edit my album cover with
 			<img src="http://www.picnik.com/badges/picnik_badge_88x31.gif" width="88" height="31" alt="Picnik" />
-		</a>
+		</button>
 	</p>
 </form>
 
