--- a/static/svg.html
+++ b/static/svg.html
@@ -3,10 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-	<meta name="description" content="New meme: my random band's new random album cover. Make your own!" />
 	<title>Wikipedia Names Your Band</title>
 	<link rel="stylesheet" media="screen" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset/reset-min.css">
 	<link rel="stylesheet" media="screen" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/fonts/fonts-min.css">
+	<link rel="stylesheet" media="screen" type="text/css" href="/stylesheets/jquery.svg.css" />
 	<link rel="stylesheet" media="screen" type="text/css" href="/stylesheets/application.css" />
 </head>
 <body>
@@ -18,29 +18,13 @@
 	<sup><a href="http://www.buzzfeed.com/peggy/wikipedia-names-your-band">1</a></sup>
 </h2>
 
-<p id="addthis">
-	<label for="short_url">Short URL:</label>
-	<input id="short_url" type="text" readonly="readonly" />
-	<button id="email">
-		<img src="http://s7.addthis.com/button1-email.gif" width="54" height="16" alt="Email" />
-	</a>
-	<button id="share">
-		<img src="http://s7.addthis.com/static/btn/sm-share-en.gif" width="83" height="16" alt="Bookmark and Share" />
-	</a>
-</p>
-
-<p id="cover"></p>
-
-<p id="flickr">
-	Find more random album covers in the <a href="http://flickr.com/groups/987550@N25/pool/">Flick<span>r</span> &#8220;Wikipedia Names Your Band&#8221; pool</a>!
-</p>
+<div id="canvas"></div>
 
 <a href="http://github.com/jpmckinney/wnyb/tree/master">
 	<img id="github" src="http://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub" />
 </a>
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-<script type="text/javascript" src="http://s7.addthis.com/js/200/addthis_widget.js"></script>
-<script type="text/javascript" src="/javascripts/share.js"></script>
+<script type="text/javascript" src="/javascripts/jquery.svg.js"></script>
 </body>
 </html>
