add experimental 'i'm feeling lucky' feature

--- a/static/svg.html
+++ b/static/svg.html
@@ -18,13 +18,30 @@
 	<sup><a href="http://www.buzzfeed.com/peggy/wikipedia-names-your-band">1</a></sup>
 </h2>
 
-<div id="canvas"></div>
+<p>
+	If you don't see anything, then your browser doesn't support <a href="http://en.wikipedia.org/wiki/Scalable_Vector_Graphics"><abbr title="Scalable Vector Graphics">SVG</abbr></a>, sorry!
+</p>
+
+<div id="canvas">
+	<button class="retry">
+		<img src="/images/famfamfam/silk/arrow_refresh.png" width="16" height="16" alt="Regenerate Cover" />
+	</button>
+	<button class="export">
+		<img src="/images/famfamfam/silk/picture_save.png" width="16" height="16" alt="Save Cover" />
+	</button>
+</div>
+
+<p id="back">
+	<a href="/">&laquo; back to Wikipedia Names Your Band</a>
+</p>
 
 <a href="http://github.com/jpmckinney/wnyb/tree/master">
 	<img id="github" src="http://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub" />
 </a>
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-<script type="text/javascript" src="/javascripts/jquery.svg.js"></script>
+<script type="text/javascript" src="/javascripts/jquery.svg.pack.js"></script>
+<script type="text/javascript" src="/javascripts/jquery.query.js"></script>
+<script type="text/javascript" src="/javascripts/svg.js"></script>
 </body>
 </html>
