--- a/static/index.html
+++ b/static/index.html
@@ -60,6 +60,10 @@
 			Edit my album cover with
 			<img src="http://www.picnik.com/badges/picnik_badge_88x31.gif" width="88" height="31" alt="Picnik" />
 		</button>
+		<!--button class="lucky">
+			I'm feeling lucky
+			<em>(Experimental)</em>
+		</button-->
 	</p>
 </form>
 
@@ -68,6 +72,7 @@
 </a>
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+<script type="text/javascript" src="/javascripts/jquery.query.js"></script>
 <script type="text/javascript" src="/javascripts/index.js"></script>
 </body>
 </html>
