--- a/static/share.html
+++ b/static/share.html
@@ -18,7 +18,7 @@
 	<sup><a href="http://www.buzzfeed.com/peggy/wikipedia-names-your-band">1</a></sup>
 </h2>
 
-<p id="addthis">
+<p>
 	<label for="short_url">Short URL:</label>
 	<input id="short_url" type="text" readonly="readonly" />
 	<button id="email">
@@ -41,6 +41,7 @@
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 <script type="text/javascript" src="http://s7.addthis.com/js/200/addthis_widget.js"></script>
+<script type="text/javascript" src="/javascripts/jquery.query.js"></script>
 <script type="text/javascript" src="/javascripts/share.js"></script>
 </body>
 </html>
