--- a/static/share.html
+++ b/static/share.html
@@ -43,5 +43,20 @@
 <script type="text/javascript" src="http://s7.addthis.com/js/200/addthis_widget.js"></script>
 <script type="text/javascript" src="/javascripts/jquery.query.js"></script>
 <script type="text/javascript" src="/javascripts/share.js"></script>
+<script type="text/javascript">
+var uservoiceJsHost = ("https:" == document.location.protocol) ? "https://uservoice.com" : "http://cdn.uservoice.com"
+document.write(unescape("%3Cscript src='" + uservoiceJsHost + "/javascripts/widgets/tab.js' type='text/javascript'%3E%3C/script%3E"))
+</script>
+<script type="text/javascript">
+UserVoice.Tab.show({ 
+key: 'slashpoundbang',
+host: 'slashpoundbang.uservoice.com', 
+forum: 'general', 
+alignment: 'right',
+background_color:'#f00', 
+text_color: 'white',
+hover_color: '#06C'
+})
+</script>
 </body>
 </html>
