fix mismatched tags

--- a/static/share.html
+++ b/static/share.html
@@ -23,10 +23,10 @@
 	<input id="short_url" type="text" readonly="readonly" />
 	<button id="email">
 		<img src="http://s7.addthis.com/button1-email.gif" width="54" height="16" alt="Email" />
-	</a>
+	</button>
 	<button id="share">
 		<img src="http://s7.addthis.com/static/btn/sm-share-en.gif" width="83" height="16" alt="Bookmark and Share" />
-	</a>
+	</button>
 </p>
 
 <p id="cover"></p>
