--- a/static/share.html
+++ b/static/share.html
@@ -44,6 +44,15 @@
 <script type="text/javascript" src="/javascripts/jquery.query.js"></script>
 <script type="text/javascript" src="/javascripts/share.js"></script>
 <script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-7711032-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
+<script type="text/javascript">
 var uservoiceJsHost = ("https:" == document.location.protocol) ? "https://uservoice.com" : "http://cdn.uservoice.com"
 document.write(unescape("%3Cscript src='" + uservoiceJsHost + "/javascripts/widgets/tab.js' type='text/javascript'%3E%3C/script%3E"))
 </script>
