add twitter link to all pages

--- a/static/svg.html
+++ b/static/svg.html
@@ -35,6 +35,10 @@
 	<a href="/">&laquo; back to Wikipedia Names Your Band</a>
 </p>
 
+<p id="twitter">
+	Follow me on <a href="http://twitter.com/jpmck">Twitter</a>!
+</p>
+
 <a href="http://github.com/jpmckinney/wnyb/tree/master">
 	<img id="github" src="http://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub" />
 </a>
