--- a/static/share.html
+++ b/static/share.html
@@ -35,6 +35,10 @@
 	Find more random album covers in the <a href="http://flickr.com/groups/987550@N25/pool/">Flick<span>r</span> &#8220;Wikipedia Names Your Band&#8221; pool</a>!
 </p>
 
+<p id="twitter">
+	Follow me on <a href="http://twitter.com/jpmck">Twitter</a>!
+</p>
+
 <a href="http://github.com/jpmckinney/wnyb/tree/master">
 	<img id="github" src="http://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub" />
 </a>
