--- a/static/index.html
+++ b/static/index.html
@@ -60,10 +60,6 @@
 			Edit my album cover with
 			<img src="http://www.picnik.com/badges/picnik_badge_88x31.gif" width="88" height="31" alt="Picnik" />
 		</button>
-		<!--button class="lucky">
-			I'm feeling lucky
-			<em>(Experimental)</em>
-		</button-->
 	</p>
 </form>
 
@@ -75,6 +71,7 @@
 	<img id="github" src="http://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub" />
 </a>
 
+<script type="text/javascript" src="http://www.google.com/jsapi?key=ABQIAAAACjg5EelPDHaItWLh83iDnxR_jl1Vg_GQLVsZHJ-raSQBIsdyqhRzpilSHVrvcCjA8JZBnEqfBnLtUQ"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 <script type="text/javascript" src="/javascripts/jquery.query.js"></script>
 <script type="text/javascript" src="/javascripts/index.js"></script>
@@ -87,20 +84,5 @@ try {
 var pageTracker = _gat._getTracker("UA-7711032-1");
 pageTracker._trackPageview();
 } catch(err) {}</script>
-<script type="text/javascript">
-var uservoiceJsHost = ("https:" == document.location.protocol) ? "https://uservoice.com" : "http://cdn.uservoice.com"
-document.write(unescape("%3Cscript src='" + uservoiceJsHost + "/javascripts/widgets/tab.js' type='text/javascript'%3E%3C/script%3E"))
-</script>
-<script type="text/javascript">
-UserVoice.Tab.show({ 
-key: 'slashpoundbang',
-host: 'slashpoundbang.uservoice.com', 
-forum: 'general', 
-alignment: 'right',
-background_color:'#f00', 
-text_color: 'white',
-hover_color: '#06C'
-})
-</script>
 </body>
 </html>
