add contact info, album cover-sharing site

--- a/static/experimental.html
+++ b/static/experimental.html
@@ -67,8 +67,16 @@
 	</p>
 </form>
 
+<p>
+	Share your album cover on <a href="http://albumjam.com/">AlbumJam</a> or <a href="http://www.cover-game.net/">cover-game.net</a>
+</p>
+
 <p id="twitter">
-	Follow me on <a href="http://twitter.com/jpmck">Twitter</a>!
+	created by 
+	<a href="http://twitter.com/jpmck">@jmck on Twitter</a> /
+	<a href="http://www.facebook.com/people/James-McKinney/13603549">James McKinney on Facebook</a> /
+	<a href="http://github.com/jpmckinney">jpmckinney on GitHub</a> /
+	<img src="/images/email.png" width="165" height="12" alt="" />
 </p>
 
 <a href="http://github.com/jpmckinney/wnyb/tree/master">
